# fbc_scrubber

./: .gitignore  Cargo.toml  README.md  load_hashes_analizer.txt  out.txt  record_save.txt  save_load_analizer.txt  update_analizer.txt
.github/workflows/: github_ci.yml  linter.yml
lib/: Cargo.toml
lib/src/: analyser.rs  fbc_chunker.rs  frequency_analyser.rs  lib.rs  storage.rs  test.rs
lib/test_files_input/: lowinput.txt  orient_express_input.txt
runner/: Cargo.toml  experement_result.csv  lowout.txt
runner/files/: lowinput.txt  out.txt
runner/src/: main.rs
src/: analyser.rs  fbc_chunker.rs  frequency_analyser.rs  lib.rs  main.rs  scrubber.rs  storage.rs  test.rs
test_files_input/: lowinput.txt
test_files_output/: fbc_topic_output.txt  lowout.txt
tests/: test.rs
