[workspace]
members = ["runner"]

[package]
name = "fbc_scrubber"
version = "0.1.0"
edition = "2021"

[dependencies]
chunkfs = { path = "../chunkfs", features = ["chunkers", "hashers"] }
sha2 = "0.10.8"
qfilter = "0.2.1"
dashmap = "7.0.0-rc2"

[profile.release]
debug = true
[profile.dev]
opt-level = 3             # Use slightly better optimizations.

