[package]
name = "fbc_scrubber"
version = "0.1.0"
edition = "2021"

[dependencies]
chunkfs = { git = "https://github.com/Piletskii-Oleg/chunkfs.git", branch = "SBC-FBC-support" }
sha2 = "0.10.8"

[profile.release]
debug = true
[profile.dev]
opt-level = 3             # Use slightly better optimizations.

